--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"engines": {
+		"node": "22.x"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -15,7 +18,7 @@
 		"db:seed": "npx tsx src/lib/server/seed.ts"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-vercel": "^6.3.1",
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/vite": "^4.1.18",
@@ -33,7 +36,6 @@
 		"@neondatabase/serverless": "^1.0.2",
 		"bcryptjs": "^3.0.3",
 		"dotenv": "^17.3.1",
-		"drizzle-orm": "^0.45.1",
-		"postgres": "^3.4.8"
+		"drizzle-orm": "^0.45.1"
 	}
 }
